@@ -282,7 +282,7 @@ class ClinicalDocumentValidatorTest {
 
 
 	private List<Detail> getErrors(AllErrors content) {
-		return content.getErrors().get(0).getDetails();
+		return content.getErrors().getFirst().getDetails();
 	}
 
 	private Node createValidClinicalDocumentNode() {
